--- a/src/styles/Picture.scss
+++ b/src/styles/Picture.scss
@@ -1,18 +1,18 @@
 .pictureContainer {
-  border: 1px solid green;
-  height: 200px;
-  width: 200px;
+  border: 1px solid;
+  height: 300px;
+  width: 350px;
+  margin-bottom: 20px;
 
   .mainPicture {
-    width: 100%;
+    width: 90%;
     height: 90%;
-    object-fit: cover;
+    object-fit: fill;
   }
 
   .iconContainer {
     width: 100%;
     height: 30px;
-    border: 1px solid blue;
     .icon {
       width: 25px;
       height: 25px;
